# HomeClaw

./: .gitignore  AGENTS.md  Channel.md  Channel_jp.md  Channel_kr.md  Channel_zh.md  Comparison.md  Design.md  Design_jp.md  Design_kr.md  Design_zh.md  HOW_TO_USE.md  HOW_TO_USE_jp.md  HOW_TO_USE_kr.md  HOW_TO_USE_zh.md  HomeClaw.spec  Improvement.md  InstallationGuide.md  QuickStart.md  README.md  README_jp.md  README_kr.md  README_zh.md  Review.md  install.bat  install.ps1  install.sh  latestPromptRequest.json  main.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements-cognee-deps.txt  requirements-constraints.txt  requirements-document.txt  requirements.txt  session.txt
base/: BaseChannel.py  BasePlugin.py  PluginManager.py  SchedulerPlugin.py  agent_memory_index.py  apns_send.py  auth_api_key_crypto.py  base.py  clawhub_integration.py  fcm_send.py  federation.py  file_understanding.py  friend_presets.py  geocode.py  intent_router.py  last_channel.py  markdown_outbound.py  media_io.py  peer_registry.py  planner_executor.py  plugin_param_resolver.py  plugins_registry.py  profile_store.py  prompt_manager.py  push_send.py  push_tokens.py  skills.py  tool_profiles.py  tools.py  tools_rag.py  user_sandbox_folders.py  user_store.py  util.py  workspace.py
channels/: .env  .env.example  CHANNEL_REVIEW.md  README.md  run.py
clients/: README.md
codeium/: 1st_round_system_framework_code.md  2nd_round_with_process_manager.md  3rd_round_nsm_windows.md  plugin_hotreload.md  plugins.md  scheduler_1.md
config/: AuthKey_4S2J822AM4.p8  core.yml  core.yml.reference  llm.yml  (+9 more)
(+947 files in other folders)
